--- a/style.css
+++ b/style.css
@@ -770,6 +770,7 @@ blockquote {
     font-size: 15px;
     font-size: 1.5rem;
     font-family: "Open Sans", sans-serif;
+    margin-bottom: 0;
     width: 200%; }
 
 .read-more {
